updated readme file

--- a/src/views/successTransaction.html
+++ b/src/views/successTransaction.html
@@ -68,7 +68,7 @@
         completed. We are processing your order and will notify you when it is
         ready for shipping.
       </p>
-      <a href="http://localhost:5173/" class="btn">Back to Home</a>
+      <a href="https://echowash.vercel.app" class="btn">Back to Home</a>
       <footer>
         <p>
           If you have any questions, contact us at
